# ontologies

./: .gitignore  CHANGELOG.md  README.md  dump.yaml  open-repository.schema.json  open-repository.yaml  pyproject.toml  taskfile.yaml
.github/workflows/: release.yaml  update-docs.yaml  widoco.yaml
celine/mapper/: engine.py  graph.py
celine/mapper/schema/: mapping_spec.schema.json
celine/mapper/specs/: obs_meter_forecast.yaml  obs_rec_forecast.yaml  rec_delivery_point.yaml
celine/ontologies/: fetch.py  main.py
releases/current/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
releases/current/provenance/: provenance-en.html  provenance-en.ttl
releases/current/sections/: crossref-en.html  description-en.html  introduction-en.html  ns-en.html  overview-en.html
releases/v0.1/: celine.jsonld  celine.shacl.ttl  celine.ttl  index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl  readme.md
releases/v0.1/provenance/: provenance-en.ttl
releases/v0.1/sections/: crossref-en.html  description-en.html  overview-en.html
releases/v0.2/: README.md  celine.jsonld  celine.schema.json  celine.shacl.ttl  celine.ttl  index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl  readme.md
releases/v0.2/provenance/: provenance-en.html  provenance-en.ttl
releases/v0.2/sections/: crossref-en.html  description-en.html  overview-en.html
releases/v0.3/: ontology.owl  ontology.ttl  readme.md
releases/v0.3/provenance/: provenance-en.html  provenance-en.ttl
releases/v0.3/sections/: abstract-en.html  crossref-en.html  description-en.html  overview-en.html
releases/v0.4/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
releases/v0.4/provenance/: provenance-en.html  provenance-en.ttl
releases/v0.4/sections/: crossref-en.html  description-en.html  overview-en.html
releases/v0.5/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
releases/v0.5/provenance/: provenance-en.html  provenance-en.ttl
releases/v0.5/sections/: crossref-en.html  description-en.html  overview-en.html
specs/current/: README.md  celine.jsonld  celine.shacl.ttl  celine.ttl  widoco.conf
specs/current/examples/: kpi-community-self-sufficiency.jsonld
specs/current/sections/: references-en.html
specs/v0.1/: README.md  celine.schema.json  celine.ttl
specs/v0.2/: celine.schema.json  celine.shacl.ttl  celine.ttl
specs/v0.3/: README.md  celine.jsonld  celine.schema.json  celine.shacl.ttl  celine.ttl  widoco.conf
specs/v0.4/: README.md  celine.jsonld  celine.schema.json  celine.ttl
specs/v0.5/: README.md  celine.jsonld  celine.schema.json  celine.shacl.ttl  celine.ttl
specs/v0.5/examples/: kpi-custom-definition.jsonld  kpi-pod-withdrawn-energy.jsonld
src/celine/mapper/: __init__.py  cli.py  graph.py  output_mapper.py  spec.py
src/celine/mapper/specs/: obs_meter_energy.yaml  obs_pv_forecast.yaml  obs_rec_energy.yaml  rec_asset.yaml  rec_community.yaml  rec_member.yaml
src/celine/ontologies/: analyze.py  main.py  tree.py  utils.py
tests/mapper/: test_engine.py  test_graph.py  test_output_mapper.py  test_spec.py
tests/mapper/fixtures/: asset_detail.json  community_detail.json  delivery_point.json  member_detail.json  meter_data_rows.json  pv_forecast_rows.json  rec_energy_rows.json
