[project]
name = "ontologies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rdflib>=7.5.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "dumpster-cli>=1.3.2",
]

[tool.uv]  # optional, helps uv handle locking
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["celine.ontologies*"]
exclude = ["tests*"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
update_pyproject_toml = true 
commit_parser = "conventional"

build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "chore"]
parse_squash_commits = true
ignore_merge_commits = true

[project.scripts]
celine-ontologies = "celine.ontologies.main:run"
